Fix: Update the text alignment based on suggestion

--- a/src/app/components/about/about.component.scss
+++ b/src/app/components/about/about.component.scss
@@ -3,12 +3,13 @@
 
   section {
     text-align: center;
-    width: 350px;
+    padding: 20px;
     margin: auto;
     display: block;
+    min-width: 320px;
 
     .volunteer-button {
-      width: 100%;
+      width: 320px;
     }
   }
 }
